namespace Poker
{
    class Card
    {
        private Suite suite;
        private Rank rank;

        public Card()
        {

        }
    }
}