namespace Poker
{
    class Dealer
    {
        private Deck deck;

        public void Deal(Table table)
        {

        }

        public void TakeCard(Card card)
        {

        }

        public void GiveReplacementCard(Player player)
        {

        }
    }
}