namespace Poker
{
    class Deck
    {
        
        private Card[] cards;

        public Deck()
        {

        }

        public Card[] GetTopCard()
        {
            return null;
        }

        public void PutBackCard(Card card)
        {

        }

        public void Shuffle()
        {

        }
    }
}