namespace Poker
{
    class Game
    {
        private Dealer dealer;
        private Table table;

        public void NewGame()
        {

        }

        public void LoadGame(string file)
        {

        }

        public void WinnerPlayer()
        {

        }

        public void DrawPlayer()
        {

        }

        public void SaveGame(string save)
        {

        }
    }
}