namespace Poker
{
    class Player
    {
        private string name;
        private Hand hand;
        private Card[] dicard;

        public Player()
        {

        }
    }
}