namespace Poker
{
    public enum Suite
    {
        Clubs,
        Diamonds,
        Hearts,
        Spades
    }
}