namespace Poker
{
    class Table
    {
        private Player[] players;

        public void ShowHands()
        {

        }
        public void CaompareHands()
        {

        }
    }
}